# msfe-ng

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/msfe-api/: Cargo.toml
crates/msfe-api/src/: lib.rs
crates/msfe-cli/: Cargo.toml
crates/msfe-cli/src/: main.rs
crates/msfe-core/: Cargo.toml
crates/msfe-core/src/: config.rs  db.rs  digest.rs  engine.rs  housekeeping.rs  json.rs  legacy.rs  lib.rs  mailflow.rs  mailscanner.rs  migrate.rs  panel.rs  quarantine.rs  rulefile.rs  rules.rs  service.rs  spambox.rs  stats.rs  sync.rs  users.rs
crates/msfe-ngd/: Cargo.toml
crates/msfe-ngd/src/: api.rs  http.rs  main.rs  views.rs
db/: README.md
db/migrations/: 0001_init.sql
docs/: admin-guide.md  architecture.md  feature-parity.md  migration.md  user-guide.md
packaging/: dist.sh  engine-install.sh  get.sh  install.sh  lib.sh  preflight.sh  uninstall.sh
packaging/cron/: msfe-ng
packaging/systemd/: msfe-ng.service
panel/cpanel/: msfe-ng.conf
panel/cpanel/jupiter/: dynamicui_msfe_ng.conf  index.html.tt  install.json  msfe-ng.live.cgi
panel/cpanel/uapi/: MSFE_NG.pm
panel/cpanel/whm/: msfe-ng.cgi
panel/directadmin/: plugin.conf
panel/directadmin/admin/: index.raw
panel/directadmin/user/: index.raw
panel/hooks/: EximHook.pm  UpcpHook.pm
panel/mailscanner/: MSFENG.pm  MSFE_NG_Logging.pm
web/user/: index.html
web/whm/: index.html
