[workspace]
resolver = "2"
members = [
    "crates/msfe-api",
    "crates/msfe-core",
    "crates/msfe-ngd",
    "crates/msfe-cli",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.74"
license = "GPL-3.0-or-later"
repository = "https://github.com/inalto/msfe-ng"
authors = ["Alain Martini (Martini Multimedia s.a.s.)", "MSFE-NG contributors"]

# M0 deliberately uses no external crates so the skeleton builds fully offline.
# Later milestones will add: tokio/axum (daemon), serde/serde_json (api),
# sqlx or mysql (db), etc.
[workspace.dependencies]
msfe-api = { path = "crates/msfe-api" }
msfe-core = { path = "crates/msfe-core" }

[profile.release]
opt-level = 2
lto = "thin"
strip = true
