[package]
name = "msfe-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "MSFE-NG command-line tool (msfe-ng)."

[[bin]]
name = "msfe-ng"
path = "src/main.rs"

[dependencies]
msfe-api = { workspace = true }
msfe-core = { workspace = true }
