[package]
name = "msfe-ngd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "MSFE-NG daemon: serves the WHM/user UI and API over a Unix socket."

[[bin]]
name = "msfe-ngd"
path = "src/main.rs"

[dependencies]
msfe-api = { workspace = true }
msfe-core = { workspace = true }
